# INFT2503-Cpp

./: .gitignore  README.md
oving1/: CMakeLists.txt  temperatures_a.cpp  temperatures_b.cpp
oving2/: CMakeLists.txt  oppgave1a.cpp  oppgave1b.cpp  oppgave4  oppgave4.cpp  oppgave5  oppgave5.cpp  oppgave6  oppgave6.cpp
oving3/: CMakeLists.txt  commodity.cpp  commodity.hpp  oppgave4.cpp
oving4/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp
oving5/: CMakeLists.txt  oppgave1.cpp  oppgave1_og_2.cpp
oving6/: CMakeLists.txt  ChessBoard.cpp  ChessBoardPrint.cpp  main.cpp  oppgave2.cpp
