cmake_minimum_required(VERSION 3.10)

project(oving2)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

add_executable(oppgave1a oppgave1a.cpp)
add_executable(oppgave1b oppgave1b.cpp)
add_executable(oppgave4 oppgave4.cpp)
add_executable(oppgave5 oppgave5.cpp)
add_executable(oppgave6 oppgave6.cpp)
